--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -11,6 +11,7 @@ test_config:
   falcon/pytorch-tiiuae/Falcon3-1B-Base-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
     # PCC Drop with new tt-mlir defaults for math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
     compiler_config:
       math_fidelity: ttnn_default
       fp32_dest_acc_en: false
@@ -19,6 +20,7 @@ test_config:
     required_pcc: 0.985 # Is 0.990 (p150) or 0.989 (n150)
     status: EXPECTED_PASSING
     # PCC Drop with new tt-mlir defaults for math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
     compiler_config:
       math_fidelity: ttnn_default
       fp32_dest_acc_en: false
@@ -62,6 +64,7 @@ test_config:
   gemma/pytorch-google/gemma-1.1-2b-it-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
     # PCC Drop with new tt-mlir defaults for math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
     compiler_config:
       math_fidelity: ttnn_default
       fp32_dest_acc_en: false
@@ -87,6 +90,7 @@ test_config:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     # PCC Drop with new tt-mlir defaults for math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
     compiler_config:
       math_fidelity: ttnn_default
       fp32_dest_acc_en: false
