--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -40,6 +40,7 @@ test_config:
     status: EXPECTED_PASSING
 
     # PCC Drop with new tt-mlir defaults for math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
     compiler_config:
       math_fidelity: ttnn_default
       fp32_dest_acc_en: false
