--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -1038,9 +1038,7 @@ test_config:
     bringup_status: FAILED_FE_COMPILATION
 
   yolov7/pytorch-yolov7-single_device-inference:
-    reason: "AssertionError: Comparison result 0 failed: PCC comparison failed. Calculated: pcc=0.9570515751838684. Required: pcc=0.99."
-    assert_pcc: false
-    bringup_status: INCORRECT_RESULT
+    status: EXPECTED_PASSING
 
   yolov7/pytorch-yolov7-w6-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
@@ -2561,3 +2559,9 @@ test_config:
   wan/pytorch-wan2.2-ti2v-5b-single_device-inference:
     status: NOT_SUPPORTED_SKIP
     reason: "Wan2.2 model requires a lot of memeory and takes a lot of time to load hence skipping it for now."
+
+  monodle/pytorch-dla34-single_device-inference:
+    status: EXPECTED_PASSING
+
+  alexnet/pytorch-alexnet_high_res-single_device-inference:
+    status: EXPECTED_PASSING
