--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -14,14 +14,16 @@ test_config:
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "PCC decreased with inputs changes to 0.946 in BH / 0.887 in WH"
-
+    markers: [testing]
   gpt_neo/causal_lm/pytorch-gpt_neo_1_3B-single_device-inference:
     required_pcc: 0.98 # https://github.com/tenstorrent/tt-mlir/issues/6461
     status: EXPECTED_PASSING
+    markers: [testing]
 
   gpt_neo/causal_lm/pytorch-gpt_neo_2_7B-single_device-inference:
     assert_pcc: false  # 0.749 on BH / 0.76 on WH
     status: EXPECTED_PASSING
+    markers: [testing]
 
   vovnet/pytorch-vovnet27s-single_device-inference:
     status: EXPECTED_PASSING
@@ -586,6 +588,7 @@ test_config:
     status: EXPECTED_PASSING
     required_pcc: 0.98
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
 
   phi2/causal_lm/pytorch-microsoft/phi-2-pytdml-single_device-inference:
     status: EXPECTED_PASSING
@@ -667,16 +670,19 @@ test_config:
     arch_overrides:
       p150:
         required_pcc: 0.98 # https://github.com/tenstorrent/tt-xla/issues/2433
+    markers: [testing]
 
   opt/qa/pytorch-facebook/opt-350m-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   opt/causal_lm/pytorch-facebook/opt-125m-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   opt/causal_lm/pytorch-facebook/opt-350m-single_device-inference:
     status: EXPECTED_PASSING
-    markers: ["extended"]
+    markers: ["extended", "testing"]
 
   opt/sequence_classification/pytorch-facebook/opt-125m-single_device-inference:
     status: EXPECTED_PASSING
@@ -705,9 +711,11 @@ test_config:
 
   albert/token_classification/pytorch-base_v1-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   albert/token_classification/pytorch-large_v1-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   albert/token_classification/pytorch-xxlarge_v1-single_device-inference:
     status: EXPECTED_PASSING
@@ -716,6 +724,7 @@ test_config:
         required_pcc: 0.98 # tt-torch has this at 0.99
       p150:
         required_pcc: 0.97 # tt-torch has this at 0.99
+    markers: [testing]
 
   albert/masked_lm/pytorch-base_v1-single_device-inference:
     status: EXPECTED_PASSING
@@ -766,10 +775,12 @@ test_config:
   albert/token_classification/pytorch-large_v2-single_device-inference:
     required_pcc: 0.975
     status: EXPECTED_PASSING
+    markers: [testing]
 
   albert/token_classification/pytorch-xlarge_v1-single_device-inference:
     status: EXPECTED_PASSING
     required_pcc: 0.98
+    markers: [testing]
 
   perceiverio_vision/pytorch-deepmind/vision-perceiver-fourier-single_device-inference:
     required_pcc: 0.98
@@ -783,16 +794,19 @@ test_config:
 
   albert/token_classification/pytorch-base_v2-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   albert/token_classification/pytorch-xxlarge_v2-single_device-inference:
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.958276593048647. Required: pcc=0.99"
+    markers: [testing]
 
   opt/causal_lm/pytorch-facebook/opt-1.3b-single_device-inference:
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9574284831613491. Required: pcc=0.99"
+    markers: [testing]
 
   perceiverio_vision/pytorch-deepmind/vision-perceiver-learned-single_device-inference:
     assert_pcc: false  # PCC observed: 0.9516052236372167 (below 0.99 threshold)
@@ -804,7 +818,7 @@ test_config:
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9410670165223607. Required: pcc=0.99"
-
+    markers: [testing]
   # yolov8/pytorch-yolov8n-single_device-inference:
   #   status: EXPECTED_PASSING
 
@@ -815,6 +829,7 @@ test_config:
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.872334097539835. Required: pcc=0.99"
+    markers: [testing]
 
   t5/pytorch-t5-base-single_device-inference:
     status: EXPECTED_PASSING
@@ -920,9 +935,11 @@ test_config:
 
   qwen_3/causal_lm/pytorch-4b-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   qwen_3/causal_lm/pytorch-1_7b-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   qwen_2_5_coder/pytorch-3b-single_device-inference:
     assert_pcc: false
@@ -930,6 +947,7 @@ test_config:
 
   qwen_3/causal_lm/pytorch-0_6b-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   qwen_2_5/causal_lm/pytorch-3b-single_device-inference:
     assert_pcc: false
@@ -1284,6 +1302,7 @@ test_config:
 
   gemma/pytorch-google/gemma-1.1-2b-it-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   nbeats/pytorch-generic_basis-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
@@ -1454,7 +1473,7 @@ test_config:
 
   gemma/pytorch-google/gemma-2-2b-it-single_device-inference:
     status: EXPECTED_PASSING
-    markers: ["extended", push]
+    markers: ["extended", "testing"]
 
   wide_resnet/pytorch-wide_resnet50_2.timm-single_device-inference:
     status: EXPECTED_PASSING
@@ -1491,12 +1510,14 @@ test_config:
   gemma/pytorch-google/gemma-2b-single_device-inference:
     assert_pcc: false
     status: EXPECTED_PASSING
+    markers: [testing]
 
   autoencoder/pytorch-conv-single_device-inference:
     status: EXPECTED_PASSING
 
   phi3/phi_3_5/pytorch-mini_instruct-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   bi_lstm_crf/pytorch-default-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
@@ -1530,6 +1551,7 @@ test_config:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
+    markers: [testing]
 
   stable_diffusion_xl/pytorch-stable-diffusion-xl-base-1.0-single_device-inference:
     status: EXCLUDE_MODEL  # stable_diffusion variants have a hand written test, don't run via test_models.py. TODO(@ppadjinTT): when pipeline becomes supported through test infra, enable this model again.
@@ -1550,6 +1572,7 @@ test_config:
   phi4/causal_lm/pytorch-microsoft/phi-4-single_device-inference:
     supported_archs: ["p150"] # Run as tensor_parallel for wormhole (14B param model).
     status: EXPECTED_PASSING
+    markers: [testing]
 
   phi4/seq_cls/pytorch-microsoft/phi-4-single_device-inference:
     status: EXPECTED_PASSING
@@ -1578,10 +1601,11 @@ test_config:
 
   phi3/causal_lm/pytorch-microsoft/Phi-3-mini-128k-instruct-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [testing]
 
   phi3/causal_lm/pytorch-microsoft/Phi-3-mini-4k-instruct-single_device-inference:
     status: EXPECTED_PASSING
-    markers: [push]
+    markers: [testing]
 
   phi3/token_cls/pytorch-microsoft/Phi-3-mini-128k-instruct-single_device-inference:
     required_pcc: 0.98
@@ -1894,12 +1918,15 @@ test_config:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     required_pcc: 0.98
+    markers: [testing]
 
   qwen_3/causal_lm/pytorch-30b_a3b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
+    markers: [testing]
 
   qwen_3/causal_lm/pytorch-32b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
+    markers: [testing]
 
   qwen_3/causal_lm/pytorch-8b-single_device-inference:
     status: EXPECTED_PASSING
@@ -1908,6 +1935,7 @@ test_config:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
         bringup_status: FAILED_RUNTIME
+    markers: [testing]
 
   qwen_2/causal_lm/pytorch-qwq_32b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1928,9 +1956,11 @@ test_config:
   gemma/pytorch-google/gemma-2-9b-it-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
+    markers: [testing]
 
   gemma/pytorch-google/gemma-2-27b-it-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
+    markers: [testing]
 
   falcon/pytorch-tiiuae/falcon-7b-instruct-single_device-inference:
     supported_archs: ["p150"]
