--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -670,7 +670,7 @@ test_config:
     arch_overrides:
       p150:
         required_pcc: 0.98 # https://github.com/tenstorrent/tt-xla/issues/2433
-    markers: [testing]
+    # markers: [testing]
 
   opt/qa/pytorch-facebook/opt-350m-single_device-inference:
     status: EXPECTED_PASSING
@@ -724,7 +724,7 @@ test_config:
         required_pcc: 0.98 # tt-torch has this at 0.99
       p150:
         required_pcc: 0.97 # tt-torch has this at 0.99
-    markers: [testing]
+    # markers: [testing]
 
   albert/masked_lm/pytorch-base_v1-single_device-inference:
     status: EXPECTED_PASSING
@@ -1551,7 +1551,7 @@ test_config:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
-    markers: [testing]
+    # markers: [testing]
 
   stable_diffusion_xl/pytorch-stable-diffusion-xl-base-1.0-single_device-inference:
     status: EXCLUDE_MODEL  # stable_diffusion variants have a hand written test, don't run via test_models.py. TODO(@ppadjinTT): when pipeline becomes supported through test infra, enable this model again.
@@ -1572,7 +1572,7 @@ test_config:
   phi4/causal_lm/pytorch-microsoft/phi-4-single_device-inference:
     supported_archs: ["p150"] # Run as tensor_parallel for wormhole (14B param model).
     status: EXPECTED_PASSING
-    markers: [testing]
+    # markers: [testing]
 
   phi4/seq_cls/pytorch-microsoft/phi-4-single_device-inference:
     status: EXPECTED_PASSING
@@ -1918,7 +1918,7 @@ test_config:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
     required_pcc: 0.98
-    markers: [testing]
+    # markers: [testing]
 
   qwen_3/causal_lm/pytorch-30b_a3b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1935,7 +1935,7 @@ test_config:
         status: NOT_SUPPORTED_SKIP
         reason: "Too large for single chip"
         bringup_status: FAILED_RUNTIME
-    markers: [testing]
+    # markers: [testing]
 
   qwen_2/causal_lm/pytorch-qwq_32b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1956,7 +1956,7 @@ test_config:
   gemma/pytorch-google/gemma-2-9b-it-single_device-inference:
     supported_archs: ["p150"]
     status: EXPECTED_PASSING
-    markers: [testing]
+    # markers: [testing]
 
   gemma/pytorch-google/gemma-2-27b-it-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
