Add llmbox options to manual test workflow
Add llmbox-1 and llmbox-2 options to manual test workflow on specific llmbox machine

--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -28,6 +28,8 @@ on:
           - 'n300'
           - 'p150'
           - 'n300-llmbox'
+          - 'llmbox-1'
+          - 'llmbox-2'
       shared_runners:
         description: 'Run test on the CIv2 runner'
         required: false
