add publish release wheel to setup

--- a/.github/Dockerfile.release
+++ b/.github/Dockerfile.release
@@ -43,8 +43,9 @@ RUN apt-get update && \
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/
 
-# install tt-xla wheel
-COPY pjrt_plugin_tt*.whl /tmp/
-RUN pip install --no-cache-dir /tmp/pjrt_plugin_tt*.whl && rm -rf /tmp/*.whl
+COPY *.whl /tmp/
+RUN pip install --no-cache-dir /tmp/pjrt_plugin_tt*.whl && \
+    pip install --no-cache-dir /tmp/vllm_tt*.whl && \
+    rm -rf /tmp/*.whl
 
 CMD ["/bin/bash"]
