--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -80,26 +80,26 @@ jobs:
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  publish-release-wheel:
-    uses: ./.github/workflows/call-publish-release-wheel.yml
-    secrets: inherit
-    needs: [ build-ttxla ]
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      is_nightly_release: true
+  # publish-release-wheel:
+  #   uses: ./.github/workflows/call-publish-release-wheel.yml
+  #   secrets: inherit
+  #   needs: [ build-ttxla ]
+  #   with:
+  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     is_nightly_release: true
 
   # tested - working
   build-release-docker:
     uses: ./.github/workflows/call-build-release-docker.yml
-    needs: [ build-ttxla, publish-release-wheel ]
+    needs: [ build-ttxla ]
     secrets: inherit
     with:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      wheel_version_override: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      wheel_version_override: "0.1.0.dev11"
 
   # tested - individual tests work
   release-tests:
@@ -112,9 +112,9 @@ jobs:
   # tested - working
   publish-release:
     uses: ./.github/workflows/call-publish-release.yml
-    needs: [ publish-release-wheel, build-release-docker ]
+    needs: [ build-release-docker ]
     secrets: inherit
     with:
-      release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      release_tag: "0.1.0.dev11"
       docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
       is_nightly_release: true
