Qwen3 8B pcc drop

--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -76,6 +76,7 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   qwen_3/causal_lm/pytorch-8b-llm_decode-tensor_parallel-inference:
+    required_pcc: 0.985 # https://github.com/tenstorrent/tt-xla/issues/2942
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
 
