--- a/tests/runner/test_config/jax/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_single_device.yaml
@@ -334,10 +334,87 @@ test_config:
     bringup_status: FAILED_RUNTIME
   
   phi3/causal_lm/jax-microsoft/Phi-3-mini-4k-instruct-single_device-inference:
-    supported_archs: ["n300-llmbox"]
     status: NOT_SUPPORTED_SKIP
     reason: "OOM DRAM"
     bringup_status: FAILED_RUNTIME
+
+  qwen_2_5/causal_lm/jax-0_5b-single_device-inference:
+    status: EXPECTED_PASSING
+
+  qwen_2_5/causal_lm/jax-0_5b_instruct-single_device-inference:
+    status: EXPECTED_PASSING
+
+  qwen_2_5/causal_lm/jax-1_5b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 34359738368 B DRAM buffer across 12 banks, where each bank needs to store 2863312896 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
+
+  qwen_2_5/causal_lm/jax-1_5b_instruct-single_device-inference:
+    status: EXPECTED_PASSING
+
+  qwen_2_5/causal_lm/jax-3b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Out of Memory: Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
+
+  qwen_2_5/causal_lm/jax-3b_instruct-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
+
+  qwen_2_5/causal_lm/jax-7b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
+
+  qwen_2_5/causal_lm/jax-7b_instruct-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
+
+  qwen_2_5_coder/causal_lm/jax-0_5b-single_device-inference:
+    status: EXPECTED_PASSING
+  
+  qwen_2_5_coder/causal_lm/jax-1_5b-single_device-inference:
+    status: EXPECTED_PASSING
+
+  qwen_2_5_coder/causal_lm/jax-1_5b_instruct-single_device-inference:
+    status: EXPECTED_PASSING
+  
+  qwen_2_5_coder/causal_lm/jax-3b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME 
+  
+  qwen_2_5_coder/causal_lm/jax-3b_instruct-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME 
+  
+  qwen_2_5_coder/causal_lm/jax-7b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
+  
+  qwen_2_5_coder/causal_lm/jax-7b_instruct-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
+    
+  qwen_3/causal_lm/jax-0_6b-single_device-inference:
+    status: EXPECTED_PASSING
+
+  qwen_3/causal_lm/jax-1_7b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
+
+  qwen_3/causal_lm/jax-4b-single_device-inference:
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 10485760 B DRAM buffer across 12 banks, where each bank needs to store 876544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
+
+
 
   regnet/image_classification/jax-y-040-single_device-inference:
     status: EXPECTED_PASSING
