--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -31,6 +31,12 @@ test_config:
     assert_pcc: false
     reason: "Severe PCC comparison failed: pcc=0.066 < 0.99 required"
 
+  falcon/jax-tiiuae/Falcon3-3B-Base-tensor_parallel-inference:
+    supported_archs: ["n300-llmbox"]
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
+
   qwen_2_5/causal_lm/jax-0_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
