--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -9,6 +9,15 @@ on:
         required: true
 
 jobs:
+  # add basic tests
+  basic-tests:
+    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@vvukoman/extract-mlir-version-differently
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      project-filter: tt-xla
+      ref: vvukoman/extract-mlir-version-differently
+
   # tested - working
   perf-benchmark:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/extract-mlir-version-differently
