--- a/.github/Dockerfile.release
+++ b/.github/Dockerfile.release
@@ -43,7 +43,7 @@ RUN apt-get update && \
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/
 
-# temporary fix for installing the vllm wheel successfully
+# Temporary fix for the vllm wheel install
 ENV VLLM_TARGET_DEVICE="empty"
 
 COPY *.whl /tmp/
